<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393939"
    android:configChanges="keyboard|keyboardHidden"
    tools:context=".CommentsScene.CommentsFragment">

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#393939"
        android:ems="10"
        android:hint="Adicione um comentário"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textColor="@color/profile_gray"
        android:textColorHint="#9b9b9b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkButton"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@id/commentsRecyclerView"
        tools:ignore="LabelFor" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/commentsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/commentEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/row_comments" />

    <View
        android:id="@+id/fragment"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#979797"
        app:layout_constraintBottom_toTopOf="@+id/commentEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#393939"
        android:src="@mipmap/direct_mdpi"
        android:tint="#9b9b9b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <ImageButton
        android:id="@+id/checkButton"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="#2a2a2a"
        android:backgroundTint="#2a2a2a"
        android:padding="0dp"
        android:src="@mipmap/check_mdpi"
        android:tint="#393939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

</android.support.constraint.ConstraintLayout>