<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:minWidth="@dimen/activity_horizontal_margin"
    android:background="@drawable/cell_border">

    <View
        android:id="@+id/bar1"
        android:layout_width="1dp"
        android:layout_height="12dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/versusTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bar2"
        android:layout_width="1dp"
        android:layout_height="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versusTextView" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/challengerPhoto"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:civ_border_width="1dp"
        app:civ_border_color="#ffffff"/>


    <TextView
        android:id="@+id/challengerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="Jogador1"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/challengerPhoto"
        app:layout_constraintStart_toStartOf="@+id/challengerPhoto"
        app:layout_constraintTop_toBottomOf="@+id/challengerPhoto" />

    <TextView
        android:id="@+id/challengerSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="N"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/challengerPhoto"
        app:layout_constraintEnd_toStartOf="@+id/versusTextView"
        app:layout_constraintTop_toTopOf="@+id/challengerPhoto" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/challengedPhoto"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:civ_border_width="1dp"
        app:civ_border_color="#ffffff"/>

    <TextView
        android:id="@+id/challengedName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="Jogador2"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/challengedPhoto"
        app:layout_constraintStart_toStartOf="@+id/challengedPhoto"
        app:layout_constraintTop_toBottomOf="@+id/challengedPhoto" />

    <TextView
        android:id="@+id/challengedSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="M"
        android:textColor="#ffffff"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/challengedPhoto"
        app:layout_constraintStart_toEndOf="@+id/versusTextView"
        app:layout_constraintTop_toTopOf="@+id/challengedPhoto" />

    <TextView
        android:id="@+id/versusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="X"
        android:textColor="#ffffff"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/challengedPhoto"
        app:layout_constraintEnd_toStartOf="@+id/challengedPhoto"
        app:layout_constraintStart_toEndOf="@+id/challengerPhoto"
        app:layout_constraintTop_toTopOf="@+id/challengerPhoto" />

    <View
        android:id="@+id/backgroundBar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_bar_botton_rounded"
        app:layout_constraintCircleRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/challengerName" />

    <TextView
        android:id="@+id/numberOfLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="curtidas"
        android:textColor="#ffffff"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/likesButton"
        app:layout_constraintStart_toEndOf="@+id/likesButton"
        app:layout_constraintTop_toTopOf="@+id/likesButton" />

    <ImageButton
        android:id="@+id/likesButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundBar"
        app:srcCompat="@mipmap/feed_like" />


    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="8dp"
        android:text="comentários"
        android:textColor="#ffffff"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/numberOfLikes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberOfLikes" />

    <TextView
        android:id="@+id/whoWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="Nome ganhou de Nome"
        android:textColor="#ffffff"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="75dp"
        android:text="Há 3 horas"
        android:textColor="@color/iconTint"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/commentsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/comments"
        app:layout_constraintEnd_toStartOf="@+id/comments"
        app:layout_constraintTop_toTopOf="@+id/comments"
        app:srcCompat="@mipmap/feed_comment" />


</android.support.constraint.ConstraintLayout>
