...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/loginBackgroundDescription"/>

    <Button
        android:id="@+id/navigationLogin"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="22dp"
        android:background="@android:color/transparent"
...
